--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "html-table creator",
   "main": "html-table.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "minify": "minify html-table.js > html-table.min.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/nicolasolenev/html-table/issues"
   },
-  "homepage": "https://github.com/nicolasolenev/html-table#readme"
+  "homepage": "https://github.com/nicolasolenev/html-table#readme",
+  "devDependencies": {
+    "minify": "^9.1.0"
+  }
 }
